Stub out label endpoints
