# persephone_api/api_endpoints/label.py
@@ -1,0 +1,10 @@
+"""Handlers for phonetic label functionality"""
+
+from ..db_models import Label
+
+def search():
+    """Handle request for all available labels"""
+    raise NotImplementedError
+
+def post(labelInfo):
+    raise NotImplementedError
